# kube_dashapp

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  dashapp.yaml  pyproject.toml  readme.md
.github/workflows/: deployment.yml  format_enforcement.yml
dashapp_skeleton/apps/: simple_dashapp.py
infra/: README.md  app.py  cdk.json  repo.py  stacks.py
infra/cdk_template_patterns/: ecr.py
infra/infra/: infra_stack.py
infra_tf/dev-ecr/: backend.tf
infra_tf/modules/ecr/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra_tf/modules/fargate/: data.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
repo_skeleton/: main.py
tests/: test_lambda.py  test_module.py
