[tool.poetry]
name = "dashapp_skeleton"
version = "0.0.0"
description = "Generic repo with a dash app connected to s3 and ready to go"
authors = ["Ismael Cabral <ismael.cabral@amazing.yay>"]

[tool.poetry.dependencies]
python = ">=3.11"
dash = "^2.9.3"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"


[tool.poetry.scripts]
lambda_test = "lambda_test.main:main"

[tool.ruff]
line-length = 100
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
